Add new endpoints to swagger document
